[gd_scene load_steps=6 format=3 uid="uid://dqpubm1tofce3"]

[ext_resource type="Script" path="res://TaskList.gd" id="1_g5txw"]
[ext_resource type="Script" path="res://SaveAndLoad.gd" id="1_jypxo"]
[ext_resource type="PackedScene" uid="uid://dkxjaujmgy8ae" path="res://Task.tscn" id="2_4a31f"]
[ext_resource type="FontFile" uid="uid://dheihwi3ub1fl" path="res://arts/fonts/kenvector_future.ttf" id="2_mqnjf"]

[sub_resource type="Theme" id="Theme_hken7"]
default_font = ExtResource("2_mqnjf")
default_font_size = 12

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jypxo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hken7")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Gerencie atividades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescTextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
placeholder_text = "Escreva ou selecione uma atividade para editar"
wrap_mode = 1
scroll_smooth = true
caret_blink = true

[node name="DateTextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Insire uma data"
wrap_mode = 1
caret_blink = true

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_stretch_ratio = 0.09

[node name="DeleteButton" type="Button" parent="HBoxContainer/VBoxContainer/ButtonsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Excluir"

[node name="EditButton" type="Button" parent="HBoxContainer/VBoxContainer/ButtonsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Editar"

[node name="CreateButton" type="Button" parent="HBoxContainer/VBoxContainer/ButtonsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Criar"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
text = "Lista de atividades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/ScrollContainer" node_paths=PackedStringArray("save_load_script", "delete_button", "edit_button", "desc_edit", "date_edit")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_g5txw")
save_load_script = NodePath("../../../..")
delete_button = NodePath("../../../VBoxContainer/ButtonsHBoxContainer/DeleteButton")
edit_button = NodePath("../../../VBoxContainer/ButtonsHBoxContainer/EditButton")
task_scene = ExtResource("2_4a31f")
desc_edit = NodePath("../../../VBoxContainer/DescTextEdit")
date_edit = NodePath("../../../VBoxContainer/DateTextEdit")
save_after_seconds = 2

[connection signal="button_down" from="HBoxContainer/VBoxContainer/ButtonsHBoxContainer/DeleteButton" to="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer" method="_on_delete_task"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/ButtonsHBoxContainer/EditButton" to="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer" method="_on_edit_task_button"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/ButtonsHBoxContainer/CreateButton" to="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer" method="_on_create_task_button_down"]
